fix: limit negative pos for nodes + auto extends of world div to prevent svg links clipping

--- a/vortex-base.css
+++ b/vortex-base.css
@@ -22,8 +22,8 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    height: 100%;
-    width: 100%;
+    min-width: 100%;
+    min-height: 100%;
 }
 
 #vortex {
